--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -60,7 +60,7 @@
                                                 </div><!-- End .product-action-vertical -->
                     
                                                 <div class="product-action">
-                                                    <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                                    <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
                                                 </div><!-- End .product-action -->
                                             <% } else { %>
                                                 <p>This product is not available</p>
