--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -81,7 +81,7 @@
                             </div><!-- End .details-filter-row -->
                            
                             <div class="product-details-action">
-                                <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
 
                                 <div class="details-action-wrapper">
                                     <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
