--- a/views/admin/layout/adheader.ejs
+++ b/views/admin/layout/adheader.ejs
@@ -22,6 +22,7 @@
     <!-- End layout styles -->
     <link rel="shortcut icon" href="/admin_assets/images/favicon.png" />
 
+    <!--sweetalrt -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <!--Cropper cdn-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
