--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -40,6 +40,8 @@
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="stylesheet" href="assets/css/plugins/nouislider/nouislider.css">
       <link rel="stylesheet" href="assets/css/demos/demo-11.css">
+
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
